frontend/test/should_pass/exectype_AssignAttributeToVarUntyped.grg
using exectype;

rule r
{
	modify  {
		exec(y=x.m);
	}
}