frontend/test/should_fail/exectype_SetmapAdd.grg
using exectype;

rule r
{
	modify  {
		exec(x:int=42 && y:int=3 && {x.add(y)});
	}
}